# Interpreter

./: CMakeLists.txt  bst.c  bst.h  heap.c  heap.h  main.c  tools.c  tools.h  validations.c  validations.h
DataStructures/: bst.c  bst.h  heap.c  heap.h  stack.c  stack.h  types.h
ReadEvaluate/: evaluation.c  evaluation.h  io.c  io.h
